Another attempt at fixing weather icon distortion

--- a/public/stylesheets/sunrunr.css
+++ b/public/stylesheets/sunrunr.css
@@ -102,7 +102,9 @@ nav {
   max-height: 30px;
 }
 
-
+.weather-icon {
+  max-height: 100%
+}
 
 .scrolling-wrapper {
   overflow-x: scroll;
